--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
   "dependencies": {
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
+    "jsm": "0.0.1",
     "popper.js": "^1.16.1",
     "three": "^0.120.1",
-    "three-obj-loader": "^1.1.3",
-    "three-orbit-controls": "^82.1.0"
+    "webpack-dev-server": "^3.11.0"
   }
 }
