--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss-loader": "^3.0.0",
     "sass-loader": "^10.0.1",
     "style-loader": "^1.2.1",
+    "three-fbx-loader": "^1.0.3",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
