--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.2",
+    "gsap": "^3.5.1",
     "jquery": "^3.5.1",
     "jsm": "0.0.1",
     "popper.js": "^1.16.1",
